# Real-Time-2D-Object-recognition

./: CMakeLists.txt  Classifier.cpp  Classifier.h  csv_util.cpp  csv_util.h  feature.cpp  feature.h  filters.cpp  filters.h  main.cpp  metadata.yml  readme.txt  test.cpp  trainingData.cpp  trainingData.h  utils.h
